--- a/Pray Together/Views/Base.lproj/Main.storyboard
+++ b/Pray Together/Views/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oYe-Kt-foo">
-                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="548"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="mtJ-47-NYC">
@@ -79,6 +79,9 @@
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Stream" image="feed-tabIcon" selectedImage="feed-tabIcon" id="acW-dT-cKf"/>
+                    <connections>
+                        <outlet property="prayerStreamTableView" destination="oYe-Kt-foo" id="o2a-41-5e0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
@@ -236,7 +239,7 @@
                         <outlet property="postToOrganizations" destination="ckv-2i-MaX" id="T4q-06-nGH"/>
                         <outlet property="prayerTextField" destination="qJz-3p-Zef" id="VRz-mJ-WK5"/>
                         <outlet property="profileImage" destination="dga-4J-Xvr" id="Yag-IY-yWi"/>
-                        <segue destination="9pv-A4-QxB" kind="show" identifier="goToPrayerStreamVC" id="5HI-u6-Ugj"/>
+                        <segue destination="49e-Tb-3d3" kind="show" identifier="goHome" id="uSO-Pz-YlB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="57D-iP-ruV" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1192,8 +1195,7 @@
         <image name="me-tabIcon" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="6wg-wG-R69"/>
-        <segue reference="5HI-u6-Ugj"/>
+        <segue reference="uSO-Pz-YlB"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.55087739229999999" green="0.61406648159999999" blue="0.69024974110000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
 </document>
