--- a/Pray Together/Models/PrayerStreamTableViewCell.xib
+++ b/Pray Together/Models/PrayerStreamTableViewCell.xib
@@ -18,11 +18,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="85" id="KGk-i7-Jjw" customClass="PrayerStreamTableViewCell" customModule="Pray_Together" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="85"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="PrayerStreamTableViewCell" customModule="Pray_Together" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="409" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="84.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="409" height="118.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="6mP-Mh-uhO">
@@ -32,61 +32,61 @@
                             <constraint firstAttribute="height" constant="50" id="dJ0-Xo-BYV"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQr-T7-udx">
-                        <rect key="frame" x="114.5" y="53" width="59" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQr-T7-udx">
+                        <rect key="frame" x="78" y="48" width="40" height="16"/>
+                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I7Q-du-Al0">
-                        <rect key="frame" x="292" y="38.5" width="18" height="13"/>
-                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="3" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I7Q-du-Al0">
+                        <rect key="frame" x="374" y="71" width="5" height="10"/>
+                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="7"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person-with-folded-hands_1f64f" translatesAutoresizingMaskIntoConstraints="NO" id="QnD-24-w1x">
-                        <rect key="frame" x="292" y="56.5" width="15" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="FsH-zT-2ol"/>
-                            <constraint firstAttribute="width" constant="15" id="vk1-ro-VGG"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USERNAME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIC-qP-cJj">
-                        <rect key="frame" x="114.5" y="18" width="91" height="20"/>
+                        <rect key="frame" x="78" y="18" width="91" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="Idz-PV-yT9"/>
+                            <constraint firstAttribute="height" constant="20" id="NvT-AY-GNs"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dE1-Kx-XkT">
+                        <rect key="frame" x="374" y="86" width="30" height="28"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <state key="normal" title="🙏"/>
+                        <connections>
+                            <action selector="prayedForButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="bJI-Qb-eMG"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="nQr-T7-udx" firstAttribute="top" secondItem="qIC-qP-cJj" secondAttribute="bottom" constant="15" id="B2u-tk-bgH"/>
-                    <constraint firstItem="qIC-qP-cJj" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="CFg-va-Cdw"/>
+                    <constraint firstItem="qIC-qP-cJj" firstAttribute="leading" secondItem="6mP-Mh-uhO" secondAttribute="trailing" constant="10" id="6Tf-KG-2k4"/>
                     <constraint firstItem="6mP-Mh-uhO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="JlC-0R-rZo"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="QnD-24-w1x" secondAttribute="bottom" constant="5" id="Ubl-uq-qEe"/>
-                    <constraint firstItem="QnD-24-w1x" firstAttribute="top" secondItem="I7Q-du-Al0" secondAttribute="bottom" constant="5" id="gS5-9e-flw"/>
-                    <constraint firstItem="qIC-qP-cJj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="l6P-5o-lNT"/>
-                    <constraint firstItem="I7Q-du-Al0" firstAttribute="leading" secondItem="QnD-24-w1x" secondAttribute="leading" id="lTM-y9-dl1"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="QnD-24-w1x" secondAttribute="trailing" constant="5" id="leu-60-O3u"/>
-                    <constraint firstItem="nQr-T7-udx" firstAttribute="leading" secondItem="qIC-qP-cJj" secondAttribute="leading" id="o8V-1o-GOn"/>
+                    <constraint firstAttribute="bottom" secondItem="dE1-Kx-XkT" secondAttribute="bottom" constant="5" id="K0F-iX-39l"/>
+                    <constraint firstItem="qIC-qP-cJj" firstAttribute="top" secondItem="6mP-Mh-uhO" secondAttribute="top" id="P9n-SE-7R0"/>
+                    <constraint firstItem="I7Q-du-Al0" firstAttribute="leading" secondItem="dE1-Kx-XkT" secondAttribute="leading" id="S6Z-Eh-lM5"/>
+                    <constraint firstItem="nQr-T7-udx" firstAttribute="leading" secondItem="6mP-Mh-uhO" secondAttribute="trailing" constant="10" id="cPN-By-noZ"/>
+                    <constraint firstAttribute="trailing" secondItem="dE1-Kx-XkT" secondAttribute="trailing" constant="5" id="itK-5s-y4h"/>
+                    <constraint firstItem="nQr-T7-udx" firstAttribute="top" secondItem="qIC-qP-cJj" secondAttribute="bottom" constant="10" id="lb6-VK-Ztk"/>
                     <constraint firstItem="6mP-Mh-uhO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="oPZ-Gd-DGm"/>
+                    <constraint firstItem="dE1-Kx-XkT" firstAttribute="top" secondItem="I7Q-du-Al0" secondAttribute="bottom" constant="5" id="rtb-CG-dYC"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="content" destination="nQr-T7-udx" id="bFE-0s-RDq"/>
                 <outlet property="numberOfTimesPrayedFor" destination="I7Q-du-Al0" id="awF-1x-Dn2"/>
-                <outlet property="prayedForIcon" destination="QnD-24-w1x" id="QAC-Hs-r74"/>
+                <outlet property="prayedForButton" destination="dE1-Kx-XkT" id="7TS-bq-l46"/>
                 <outlet property="profileImage" destination="6mP-Mh-uhO" id="aHo-hk-ynf"/>
                 <outlet property="username" destination="qIC-qP-cJj" id="Qv3-bb-Mb0"/>
             </connections>
-            <point key="canvasLocation" x="34" y="74.5"/>
+            <point key="canvasLocation" x="78.5" y="91.5"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="defaultProfileImage" width="102" height="102"/>
-        <image name="person-with-folded-hands_1f64f" width="120" height="120"/>
     </resources>
 </document>
