--- a/Pray Together/Models/PrayerStreamTableViewCell.xib
+++ b/Pray Together/Models/PrayerStreamTableViewCell.xib
@@ -18,7 +18,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="PrayerStreamTableViewCell" customModule="Pray_Together" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PrayerStreamCell" rowHeight="120" id="KGk-i7-Jjw" customClass="PrayerStreamTableViewCell" customModule="Pray_Together" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="409" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -33,13 +33,13 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQr-T7-udx">
-                        <rect key="frame" x="78" y="48" width="40" height="16"/>
+                        <rect key="frame" x="78" y="48" width="291" height="52.5"/>
                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="3" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I7Q-du-Al0">
-                        <rect key="frame" x="374" y="71" width="5" height="10"/>
+                        <rect key="frame" x="379" y="71" width="5" height="10"/>
                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="7"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -54,7 +54,10 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dE1-Kx-XkT">
-                        <rect key="frame" x="374" y="86" width="30" height="28"/>
+                        <rect key="frame" x="379" y="86" width="25" height="28"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="25" id="gjv-2X-5UK"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <state key="normal" title="🙏"/>
                         <connections>
@@ -64,10 +67,12 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="qIC-qP-cJj" firstAttribute="leading" secondItem="6mP-Mh-uhO" secondAttribute="trailing" constant="10" id="6Tf-KG-2k4"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="nQr-T7-udx" secondAttribute="bottom" constant="10" id="GRp-IM-Ba1"/>
                     <constraint firstItem="6mP-Mh-uhO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="JlC-0R-rZo"/>
                     <constraint firstAttribute="bottom" secondItem="dE1-Kx-XkT" secondAttribute="bottom" constant="5" id="K0F-iX-39l"/>
                     <constraint firstItem="qIC-qP-cJj" firstAttribute="top" secondItem="6mP-Mh-uhO" secondAttribute="top" id="P9n-SE-7R0"/>
                     <constraint firstItem="I7Q-du-Al0" firstAttribute="leading" secondItem="dE1-Kx-XkT" secondAttribute="leading" id="S6Z-Eh-lM5"/>
+                    <constraint firstItem="I7Q-du-Al0" firstAttribute="leading" secondItem="nQr-T7-udx" secondAttribute="trailing" constant="10" id="aMv-Te-Ijf"/>
                     <constraint firstItem="nQr-T7-udx" firstAttribute="leading" secondItem="6mP-Mh-uhO" secondAttribute="trailing" constant="10" id="cPN-By-noZ"/>
                     <constraint firstAttribute="trailing" secondItem="dE1-Kx-XkT" secondAttribute="trailing" constant="5" id="itK-5s-y4h"/>
                     <constraint firstItem="nQr-T7-udx" firstAttribute="top" secondItem="qIC-qP-cJj" secondAttribute="bottom" constant="10" id="lb6-VK-Ztk"/>
