--- a/Pray Together/Views/Base.lproj/Main.storyboard
+++ b/Pray Together/Views/Base.lproj/Main.storyboard
@@ -460,18 +460,38 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="poB-Xd-JSI">
-                                        <rect key="frame" x="324" y="25" width="31" height="26"/>
+                                        <rect key="frame" x="20" y="25" width="31" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="DpJ-ap-U1D"/>
+                                            <constraint firstAttribute="width" constant="31" id="PBY-SX-wDT"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
                                         <state key="normal" title="Logout"/>
+                                        <connections>
+                                            <action selector="logoutButtonPressed:" destination="ZVm-gy-xUa" eventType="touchUpInside" id="tEm-eH-9hM"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QsM-lQ-qMB">
+                                        <rect key="frame" x="325" y="25" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="4Sc-ni-qdA"/>
+                                            <constraint firstAttribute="width" constant="30" id="ggA-Cw-Uk2"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="icon-camera-128"/>
+                                        <connections>
+                                            <action selector="cameraButtonPressed:" destination="ZVm-gy-xUa" eventType="touchUpInside" id="TzA-Ln-gRH"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.091001167889999998" green="0.23417572680000001" blue="0.2863805592" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="poB-Xd-JSI" secondAttribute="trailing" constant="20" id="Fvb-qn-els"/>
-                                    <constraint firstItem="poB-Xd-JSI" firstAttribute="centerY" secondItem="H4o-Tz-Ziv" secondAttribute="centerY" id="SbW-49-sWz"/>
-                                    <constraint firstItem="poB-Xd-JSI" firstAttribute="top" secondItem="s0N-rP-guE" secondAttribute="top" constant="25" id="V1U-tH-Rtp"/>
+                                    <constraint firstItem="poB-Xd-JSI" firstAttribute="centerY" secondItem="wHo-el-BB4" secondAttribute="centerY" id="6Yl-T9-Gw2"/>
+                                    <constraint firstItem="poB-Xd-JSI" firstAttribute="top" secondItem="s0N-rP-guE" secondAttribute="top" constant="25" id="9qq-IK-hLF"/>
                                     <constraint firstItem="5no-34-Wrx" firstAttribute="centerX" secondItem="s0N-rP-guE" secondAttribute="centerX" id="Vse-gR-tdm"/>
+                                    <constraint firstAttribute="trailing" secondItem="QsM-lQ-qMB" secondAttribute="trailing" constant="20" id="aOz-ty-zkt"/>
+                                    <constraint firstItem="QsM-lQ-qMB" firstAttribute="top" secondItem="s0N-rP-guE" secondAttribute="top" constant="25" id="jfy-1e-vBF"/>
                                     <constraint firstAttribute="height" constant="70" id="la5-jf-9Gz"/>
+                                    <constraint firstItem="poB-Xd-JSI" firstAttribute="leading" secondItem="s0N-rP-guE" secondAttribute="leading" constant="20" id="nHs-N5-gzB"/>
                                     <constraint firstItem="5no-34-Wrx" firstAttribute="top" secondItem="s0N-rP-guE" secondAttribute="top" constant="25" id="yy0-rL-VFz"/>
                                 </constraints>
                             </view>
@@ -499,7 +519,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bio:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYQ-xx-GQv">
-                                        <rect key="frame" x="125" y="143" width="42" height="21"/>
+                                        <rect key="frame" x="140" y="144" width="42" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -578,6 +598,33 @@
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bio Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qus-je-eO4">
+                                        <rect key="frame" x="172" y="144" width="53" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qLE-Yt-UDL">
+                                        <rect key="frame" x="37.5" y="135" width="75" height="15"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="15" id="SSN-dE-8cD"/>
+                                            <constraint firstAttribute="width" constant="75" id="XAf-Y9-15J"/>
+                                        </constraints>
+                                        <state key="normal" image="Login Button"/>
+                                        <connections>
+                                            <action selector="editProfileButtonPressed:" destination="ZVm-gy-xUa" eventType="touchUpInside" id="pCL-1x-2f1"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRE-IG-aaV">
+                                        <rect key="frame" x="51" y="136" width="50" height="13"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="oxU-JQ-dUI"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="10"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.091001167889999998" green="0.23417572680000001" blue="0.2863805592" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
@@ -590,11 +637,15 @@
                                     <constraint firstItem="3UG-mi-7Og" firstAttribute="centerX" secondItem="XER-e4-h4z" secondAttribute="centerX" id="DpO-aA-KlO"/>
                                     <constraint firstItem="Vef-LH-MQu" firstAttribute="centerX" secondItem="3UG-mi-7Og" secondAttribute="centerX" id="Ffx-ut-gM6"/>
                                     <constraint firstItem="Sji-S6-gu0" firstAttribute="leading" secondItem="QaW-sr-CDt" secondAttribute="leading" constant="25" id="Joo-HY-OKL"/>
+                                    <constraint firstItem="gRE-IG-aaV" firstAttribute="leading" secondItem="QaW-sr-CDt" secondAttribute="leading" constant="51" id="LzF-99-y5s"/>
                                     <constraint firstItem="XER-e4-h4z" firstAttribute="leading" secondItem="Sji-S6-gu0" secondAttribute="trailing" constant="15" id="MZn-eS-iK4"/>
+                                    <constraint firstItem="qLE-Yt-UDL" firstAttribute="top" secondItem="Sji-S6-gu0" secondAttribute="bottom" constant="10" id="QIv-WD-QhN"/>
                                     <constraint firstItem="3UG-mi-7Og" firstAttribute="top" secondItem="XER-e4-h4z" secondAttribute="bottom" constant="10" id="ShF-fm-Bbb"/>
+                                    <constraint firstItem="gRE-IG-aaV" firstAttribute="centerY" secondItem="qLE-Yt-UDL" secondAttribute="centerY" id="WMc-n5-33A"/>
                                     <constraint firstItem="val-2m-E23" firstAttribute="top" secondItem="3UG-mi-7Og" secondAttribute="top" id="f10-HB-mPp"/>
                                     <constraint firstItem="Sji-S6-gu0" firstAttribute="top" secondItem="QaW-sr-CDt" secondAttribute="top" constant="25" id="qtF-1N-SGz"/>
                                     <constraint firstItem="XER-e4-h4z" firstAttribute="top" secondItem="QaW-sr-CDt" secondAttribute="top" constant="25" id="uEa-gU-dOk"/>
+                                    <constraint firstItem="qLE-Yt-UDL" firstAttribute="leading" secondItem="QaW-sr-CDt" secondAttribute="leading" constant="37.5" id="x5q-dE-a41"/>
                                     <constraint firstItem="3UG-mi-7Og" firstAttribute="leading" secondItem="XER-e4-h4z" secondAttribute="leading" id="xze-DM-DSB"/>
                                     <constraint firstItem="val-2m-E23" firstAttribute="trailing" secondItem="3UG-mi-7Og" secondAttribute="trailing" id="ymZ-ff-dcK"/>
                                     <constraint firstItem="dr6-Q6-kuY" firstAttribute="top" secondItem="3UG-mi-7Og" secondAttribute="top" id="zIb-i4-PJV"/>
@@ -624,10 +675,30 @@
                         <viewLayoutGuide key="safeArea" id="Z1j-hN-Qxp"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="me-tabIcon" id="oHV-XC-AgX"/>
+                    <connections>
+                        <outlet property="bioContentLabel" destination="Qus-je-eO4" id="fYa-uQ-uVA"/>
+                        <outlet property="bioLabel" destination="ZYQ-xx-GQv" id="mlB-Py-AS3"/>
+                        <outlet property="cameraButton" destination="QsM-lQ-qMB" id="9Rd-dd-38p"/>
+                        <outlet property="editProfileButton" destination="qLE-Yt-UDL" id="fIs-hp-7b3"/>
+                        <outlet property="followersLabel" destination="CXD-Lq-VW1" id="BYL-WS-f46"/>
+                        <outlet property="followingLabel" destination="Xn4-LR-waa" id="ddA-rV-fuR"/>
+                        <outlet property="groupsLabel" destination="val-2m-E23" id="rRT-w2-gMy"/>
+                        <outlet property="logoutButton" destination="poB-Xd-JSI" id="dFd-Z5-wXA"/>
+                        <outlet property="numberFollowingLabel" destination="a5f-0o-4Ye" id="BZL-NZ-zSE"/>
+                        <outlet property="numberOfFollowersLabel" destination="co9-xf-eka" id="y5M-ja-qJc"/>
+                        <outlet property="numberOfGroupsLabel" destination="OTz-KV-QAU" id="1ga-N0-9Wz"/>
+                        <outlet property="numberOfOrganizationsLabel" destination="tbC-I8-wK9" id="goa-ra-lcm"/>
+                        <outlet property="numberOfPrayersLabel" destination="a8u-Xf-AkQ" id="LYR-yL-LcH"/>
+                        <outlet property="organizationsLabel" destination="Vef-LH-MQu" id="qb2-fr-NXH"/>
+                        <outlet property="prayersLabel" destination="dr6-Q6-kuY" id="aNr-hX-0Kf"/>
+                        <outlet property="profileImage" destination="Sji-S6-gu0" id="z9o-ET-2Se"/>
+                        <outlet property="profileTableView" destination="94R-co-4fS" id="LbD-W6-Iij"/>
+                        <outlet property="usernameLabel" destination="XER-e4-h4z" id="hoj-69-lq1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5ra-cu-PwR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="1113"/>
+            <point key="canvasLocation" x="749.60000000000002" y="1112.2938530734634"/>
         </scene>
         <!--Welcome View Controller-->
         <scene sceneID="Krv-D7-2u9">
@@ -1192,6 +1263,7 @@
         <image name="emailIcon" width="25" height="16"/>
         <image name="feed-tabIcon" width="25" height="21"/>
         <image name="groups-tabIcon" width="25" height="23"/>
+        <image name="icon-camera-128" width="128" height="128"/>
         <image name="me-tabIcon" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
