access camera and photo library in edit profile

--- a/Pray Together/Models/PrayerStreamTableViewCell.xib
+++ b/Pray Together/Models/PrayerStreamTableViewCell.xib
@@ -25,7 +25,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="409" height="118.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="6mP-Mh-uhO">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="6mP-Mh-uhO">
                         <rect key="frame" x="18" y="18" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="MUX-RE-wOt"/>
